apps/vault/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  selector:
    matchLabels:
      app: vault
  replicas: 1
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vault
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: vault
          # Pulled Sep 7, 2022
          image: vault@sha256:79d3a9c8b1b6e9b9e7a3ae9c3d9f27422d0455c8924c5ffebcdf1f97652e989e
          resources: {"requests": {"cpu": "50m", "memory": "100Mi"}, "limits": {"memory": "500Mi"}}
          args:
            - server
          ports:
            - containerPort: 8200
          volumeMounts:
            - name: vaultdata
              mountPath: /var/vault
              subPath: vaultdata
          securityContext:
            privileged: true
      volumes:
        - name: vaultdata
          persistentVolumeClaim:
            claimName: vault
