apps/vault/patch-deployment-unseal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  template:
    spec:
      containers:
        - name: vault
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  SEALED="$(vault status --address=http://localhost:8200 --format=yaml | grep sealed)" &&\
                  if [ "${SEALED}" == "sealed: true" ]; then
                    for KEY in $UNSEAL_KEYS; do
                      vault operator unseal --address=http://localhost:8200 $KEY
                    done
                    exit 0
                  elif [ "${SEALED}" == "sealed: false" ]; then
                    exit 0
                  else
                    exit 1
                  fi
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
