apps/vault/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: vault
  namespace: vault
spec:
  ingressClassName: nginx
  rules:
  - host: vault.dataforchange.org.il
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        pathType: Prefix
        path: /
